Adjustment for style / font-size with vw units - 1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</h1>
 	
 	<div id="stripe">
-		<button id="modal" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false">INFO</button>
+		<button id="modal" data-toggle="modal" data-target="#myModal" data-backdrop="static" data-keyboard="false" style="font-size:2.5vw;">INFO</button>
 		<div class="modal fade" id="myModal" role="dialog">
     		<div class="modal-dialog">
       			<div class="modal-content">
@@ -58,10 +58,10 @@
       			</div>   
     		</div>
   		</div>
-		<button id="reset">New Colors</button>
-		<button class="mode">Easy</button>
-		<button class="mode selected">Hard</button>
-		<span id="message"></span>
+		<button id="reset" style="font-size:2.5vw;">New Colors</button>
+		<button class="mode" style="font-size:2.5vw;">Easy</button>
+		<button class="mode selected" style="font-size:2.5vw;">Hard</button>
+		<span style="font-size:2.5vw;" id="message"></span>
 	</div>
 
 	<div id="container">
