pictures bottom padding update

--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
         						<p>The user needs to click on the color that matches the 'RGB(x,x,x)' being displayed up top. Please note that the displayed RGB colors change along with the square's colors. The goal is to estimate or guess the correct color. The user may select the level of difficulty (easy or hard).</p><br>
           					<h5>What does the user need to do and look at?</h5>
           						<p>Please observe the images below. </p>
-          						<img style="width: 270px; height: 300px; margin-right: 20px;" src="rgbGame_Assets/Header1.png" />
-          						<img style="width: 270px; height: 300px;" src="rgbGame_Assets/Header2.png" /><br><br>
+          						<img style="width: 270px; height: 300px; margin-right: 20px; margin-bottom: 15px;" src="rgbGame_Assets/Header1.png" />
+          						<img style="width: 270px; height: 300px; margin-bottom: 15px;" src="rgbGame_Assets/Header2.png" /><br><br>
           					<h5>Easy vs. Hard</h5>
           						<p>The easy setting simply contains 6 squares, while the hard game has 9.</p>
-          						<img style="width: 270px; height: 300px; margin-right: 20px;" src="rgbGame_Assets/Easy.png" />
-          						<img style="width: 270px; height: 300px;" src="rgbGame_Assets/Hard.png" /><br><br>
+          						<img style="width: 270px; height: 300px; margin-right: 20px; margin-bottom: 15px;" src="rgbGame_Assets/Easy.png" />
+          						<img style="width: 270px; height: 300px; margin-bottom: 15px;" src="rgbGame_Assets/Hard.png" /><br><br>
           					<h5>When is the game over?</h5>
           						<p>A message displaying 'Try Again' shows up below the header to let the user know that the game is not done. Once the user selects the right color, 'correct' gets displayed.</p>
-          						<img style="width: 270px; height: 300px; margin-right: 20px;" src="rgbGame_Assets/Try_Again.png" />
-          						<img style="width: 270px; height: 300px;" src="rgbGame_Assets/Correct.png" /><br><br>
+          						<img style="width: 270px; height: 300px; margin-right: 20px; margin-bottom: 15px;" src="rgbGame_Assets/Try_Again.png" />
+          						<img style="width: 270px; height: 300px; margin-bottom: 15px;" src="rgbGame_Assets/Correct.png" /><br><br>
           					<h5>How can the user reset any game?</h5>
           						<p>Click on 'NEW COLORS' or 'PLAY AGAIN' (after winning). Switching between 'EASY' and 'HARD', or clicking on one of these resets the game as well.</p>
-          						<img style="width: 270px; height: 300px; margin-right: 20px;" src="rgbGame_Assets/New_Colors.png" />
-          						<img style="width: 270px; height: 300px;" src="rgbGame_Assets/Play_Again.png" /><br>			
+          						<img style="width: 270px; height: 300px; margin-right: 20px; margin-bottom: 15px;" src="rgbGame_Assets/New_Colors.png" />
+          						<img style="width: 270px; height: 300px; margin-bottom: 15px;" src="rgbGame_Assets/Play_Again.png" /><br>			
         			</div>
         			<div class="modal-footer">
         				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -61,7 +61,7 @@
 		<button id="reset" style="font-size:2.5vw;">New Colors</button>
 		<button class="mode" style="font-size:2.5vw;">Easy</button>
 		<button class="mode selected" style="font-size:2.5vw;">Hard</button>
-		<span style="font-size:2.5vw;" id="message"></span>
+		<span style="font-size:3vw;" id="message"></span>
 	</div>
 
 	<div id="container">
